link longest 7 piece endgame

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -105,6 +105,7 @@
     <p>Intresting positions:</p>
 
     <ul>
+      <li><a href="/?fen=QN4n1/6r1/3k4/8/b2K4/8/8/8_b_-_-_0_1">The longest seven piece endgame</a></li>
       <li><a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6_w_-_-_0_1">The longest six piece endgame</a></li>
       <li><a href="/?fen=8/8/8/8/1p2P3/4P3/1k6/3K4_w_-_-_0_1">The longest five piece endgame</a></li>
       <li><a href="/?fen=8/6B1/8/8/B7/8/K1pk4/8_b_-_-_0_1">Black escapes to a blessed loss with an underpromotion</a></li>
