--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -95,7 +95,7 @@
 
     <p>Put a position on the board to probe the tablebases.</p>
     <p>Syzygy tablebases provide <abbr title="win-draw-loss">WDL</abbr> and
-      <abbr title="distance-to-zero (a capture or pawn move)">DTZ</abbr>
+      <abbr title="distance-to-zeroing (a capture or pawn move)">DTZ</abbr>
       information for all endgame positions with up to 6 pieces, allowing
       you to make progress, keeping a win in hand, winning all won positions,
       bringing all drawn positions over the fifty-move line.</p>
