--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -112,6 +112,12 @@
     </ul>
   </section>
 
+  <section id="download">
+    <h2>Download</h2>
+    <p>If you want to use tablebases in a chess engine you certainly need a local copy.</p>
+    <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It might be easier to <a href="http://oics.olympuschess.com/tracker/index.php">download the tablebases via BitTorrent</a> or <a href="http://kirill-kryukov.com/chess/tablebases-online/">via eMule</a> or <a href="http://tablebase.sesse.net/syzygy/">via HTTP</a> (combined size about 150GB for 6 pieces, 20TB for 7 pieces) with a fast internet connection.</p>
+  </section>
+
   <section id="contact">
     <h2>Contact</h2>
 
