--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -115,7 +115,13 @@
   <section id="download">
     <h2>Download</h2>
     <p>If you want to use tablebases in a chess engine you certainly need a local copy.</p>
-    <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It might be easier to <a href="http://oics.olympuschess.com/tracker/index.php">download the tablebases via BitTorrent</a> or <a href="http://kirill-kryukov.com/chess/tablebases-online/">via eMule</a> or <a href="http://tablebase.sesse.net/syzygy/">via HTTP</a> with a fast internet connection (combined size about 150GB for 6 pieces, 20TB for 7 pieces).</p>
+    <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It is more efficient to download them <a href="http://oics.olympuschess.com/tracker/index.php">via BitTorrent</a> or from a mirror:</p>
+    <ul>
+      <li><a href="http://tablebase.sesse.net/syzygy/">tablebase.sesse.net</a></li>
+      <li><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a></li>
+      <li><a href="ftp://112.73.74.24/pub/syzygy">Bojun Guo (ftp)</a></li>
+    </ul>
+    Combined size if about 150GB for 6 pieces, 20TB for 7 pieces.
   </section>
 
   <section id="contact">
