add longest 3 and 4 piece endgames

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -106,6 +106,8 @@
     <p>Selected positions:</p>
     <ul>
       <li>Longest endgames:
+        <a href="/?fen=8/8/8/8/8/8/2Rk4/1K6_b_-_-_0_1">3</a>,
+        <a href="/?fen=8/8/8/6B1/8/8/4k3/1K5N_b_-_-_0_1">4</a>,
         <a href="/?fen=8/8/8/8/1p2P3/4P3/1k6/3K4_w_-_-_0_1">5</a>,
         <a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6_w_-_-_0_1">6</a>,
         <a href="/?fen=QN4n1/6r1/3k4/8/b2K4/8/8/8_b_-_-_0_1">7 pieces</a>
