add pawnful position with wide dtz

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -114,6 +114,7 @@
       </li>
       <li><a href="/?fen=8/6B1/8/8/B7/8/K1pk4/8_b_-_-_0_1">Black escapes to a blessed loss with an underpromotion</a></li>
       <li><a href="/?fen=k7/2QR4/8/8/8/4N3/2r4Q/1K6_b_-_-_0_1">Black rook chasing king to force stalemate, without avail</a></li>
+      <li><a href="/?fen=6B1/3B4/5R2/6q1/P7/1k6/8/3K4_b_-_-_0_1">656 half-moves before the winning side can safely move a pawn</a></li>
       <li>Collection of <a href="http://ruszchessstudies.blogspot.com/2018/06/syzygy-endgame-explorer-see.html">mutual zugzwangs by Árpád Rusz</a></li>
     </ul>
   </section>
