--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
         <div class="inner">
           {%block footer %}
             <p>Powered by Ronald de Man's <a href="https://github.com/syzygy1/tb">Syzygy endgame tablebases</a> and a <a href="https://github.com/niklasf/lila-tablebase">public API</a> hosted by <a href="https://tablebase.lichess.ovh">lichess.org</a>.
-            <p><a href="/legal">Legal</a>. <a href="https://github.com/niklasf/syzygy-tables.info">GitHub</a>.</p>
+            <p><a href="/legal">Legal</a>. <a href="/stats">Stats</a>. <a href="https://github.com/niklasf/syzygy-tables.info">GitHub</a>.</p>
           {%endblock%}
         </div>
       </footer>
