--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ body {
 
 h1 {
   margin: 0;
-  padding: 1em 0;
+  padding: 40px 0;
   font-size: 2.2em;
   line-height: 1.1;
   font-weight: bold;
@@ -23,7 +23,7 @@ h1 a, h1 a:hover {
 }
 
 h2 {
-  margin: 60px 0 1em 0;
+  margin: 40px 0 1em 0;
   border: 1px solid black;
   font-size: 1.2em;
   padding: 10px 15px;
