more information in about section

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -98,9 +98,10 @@
 <div id="start-info">
   <section id="syzygy">
     <h2>Syzygy tablebases</h2>
-    <p><strong>Syzygy tablebases allow perfect play with up to 6
-      (and experimentally 7) pieces,
-      both with and without the fifty-move drawing rule</strong>,
+
+    <h3>About</h3>
+    <p>Syzygy tablebases allow perfect play with up to 7 pieces,
+      both with and without the fifty-move drawing rule,
       i.e. they allow winning all won
       positions and bringing all drawn positions over the fifty-move line.<p>
     <p>The tables provide <abbr title="win-draw-loss">WDL</abbr> and
@@ -111,8 +112,12 @@
       <abbr title="depth-to-mate">DTM</abbr> does not account for the
       fifty-move drawing rule: Sometimes it is better to reset the fifty-move
       counter than to go for the shortest mate.</p>
+    <p>6 piece tables were <a href="http://www.talkchess.com/forum3/viewtopic.php?t=47681">released</a> by Ronald de Man in April 2013, including
+      <a href="https://github.com/syzygy1/tb">probing code and the generator</a>.</p>
+    <p>In 2018 Bojun Guo <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">started</a> generating 7 piece tables.</p>
     <p>The 7 piece tablebases will contain 423,836,835,667,331 <a href="https://kirill-kryukov.com/chess/nulp/results.html">unique legal positions</a> in about 20 Terabytes.</p>
-    <p>Selected positions:</p>
+
+    <h3>Selected positions</h3>
     <ul>
       <li>Longest endgames:
         <a href="/?fen=8/8/8/8/8/8/2Rk4/1K6_b_-_-_0_1">3</a>,
