--- a/templates/legal.html
+++ b/templates/legal.html
@@ -7,6 +7,10 @@
 {% block leftside %}
   <h1>Legal</h1>
 
+  <p>The tablebase lookup is provided on a best-effort basis, without guarantees
+    of correctness or availability. Feedback or questions are welcome.</p>
+  <p>There are standard server logs.</p>
+
   <nav>
     <div class="reload"><a class="btn btn-default" href="/">Back to board</a></div>
   </nav>
@@ -35,10 +39,7 @@
   <section id="privacy">
     <h2>Privacy policy / <span lang="de">Datenschutzerklärung</span></h2>
 
-    <em>Informal: There are server logs.</em>
-
     <div lang="de">
-      <h3>Zugriffsdaten und Server-Logfiles</h3>
       <p>Der Anbieter (beziehungsweise sein Webspace-Provider) erhebt Daten über jeden Zugriff auf das Angebot (so genannte Serverlogfiles). Zu den Zugriffsdaten gehören:</p>
       <p>Name der abgerufenen Webseite, Datei, Datum und Uhrzeit des Abrufs, übertragene Datenmenge, Meldung über erfolgreichen Abruf, Browsertyp nebst Version, das Betriebssystem des Nutzers, Referrer URL (die zuvor besuchte Seite), IP-Adresse und der anfragende Provider.<p>
       <p>Der Anbieter verwendet die Protokolldaten nur für statistische Auswertungen zum Zweck des Betriebs, der Sicherheit und der Optimierung des Angebotes. Der Anbieterbehält sich jedoch vor, die Protokolldaten nachträglich zu überprüfen, wenn aufgrund konkreter Anhaltspunkte der berechtigte Verdacht einer rechtswidrigen Nutzung besteht.</p>
