work towards getting rid of bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 {% block apidoc_query %}?fen={{ fen|urlencode }}{% endblock %}
 
 {% block leftside %}
-  <h1><a href="/">Syzygy endgame tablebases</a></h1>
+  <h1 class="main"><a href="/">Syzygy endgame tablebases</a></h1>
 
   <nav>
     <div id="side-to-move" class="btn-group" role="group" aria-label="Side to move">
