--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@ body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
+  color: #333;
 }
 
 h1 {
@@ -57,13 +58,13 @@ li {
 
 table {
   width: 100%;
-  border-bottom: 2px solid #eee;
-  border-top: 2px solid #eee;
+  border-bottom: 2px solid #ccc;
+  border-top: 2px solid #ccc;
   margin: 1em 0;
   border-collapse: collapse;
 }
 thead {
-  border-bottom: 4px solid #eee;
+  border-bottom: 4px solid #ccc;
 }
 td, th {
   padding: 0.2em;
@@ -127,6 +128,141 @@ footer > .inner {
   padding-top: 40px;
 }
 
+/* Glyphicons */
+
+@font-face {
+  font-family: 'Glyphicons Halflings';
+  src: url('/static/fonts/glyphicons-halflings-regular.eot');
+  src: url('/static/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/static/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('/static/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/static/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/static/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+}
+
+.glyphicon {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.glyphicon-refresh:before {
+  content: "\e031";
+}
+.glyphicon-erase:before {
+  content: "\e221";
+}
+.glyphicon-adjust:before {
+  content: "\e063";
+}
+.glyphicon-resize-horizontal:before {
+  content: "\e120";
+}
+.glyphicon-resize-vertical:before {
+  content: "\e119";
+}
+
+/* Form controls */
+
+.btn-group {
+  display: inline-block;
+}
+.btn-group > .btn {
+  position: relative;
+  float: left;
+}
+.btn-group > .btn {
+  border-radius: 0px;
+}
+.btn-group > .btn:first-child {
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
+.btn-group > .btn:last-child {
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.btn-group .btn+.btn {
+  margin-left: -1px;
+}
+.btn {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  padding: 6px 12px;
+  border-radius: 4px;
+  text-decoration: none;
+  color: #333;
+  line-height: 1.42857143;
+  font-size: 14px;
+}
+.btn-default {
+  background-color: #fff;
+  border-color: #ccc;
+}
+.btn-default.active, .btn-default:active, .btn-default:focus, .btn-default:hover {
+  background-color: #e6e6e6;
+  border-color: #adadad;
+  color: #333;
+}
+.btn.active {
+  box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
+/* .input-group {
+  position: relative;
+  display: table;
+  border-collapse: seperate;
+}
+.input-group .form-control:first-child {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+.input-group > .form-control, .input-group .input-group-btn {
+  display: table-cell;
+}
+.input-group .form-control {
+  position: relative;
+  float: left;
+  width: 100%;
+  margin-bottom: 0;
+}
+.form-control {
+  height: 34px;
+  padding: 0px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+input, button {
+  display: inline-block;
+}
+input[type=text] {
+  text-rendering: auto;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0;
+  text-shadow: none;
+  text-align: start;
+  font: 400 13.3333px Arial;
+  margin: 0;
+  padding: 0 12px;
+}
+.input-group-btn {
+  position: relative;
+  width: 1%;
+  vertical-align: middle;
+} */
+
 /* Single column */
 
 .left-side {
@@ -187,7 +323,7 @@ footer > .inner {
 /* Two columns, but limited height */
 
 @media(min-width: 680px) and (max-height: 840px) {
-  h1 {
+  h1.main {
     padding: 10px 0;
   }
   footer > .inner {
@@ -202,7 +338,7 @@ footer > .inner {
   }
 }
 @media(min-width: 680px) and (max-height: 650px) {
-  h1, .fork-me {
+  h1.main, .fork-me {
     display: none;
   }
   #side-to-move {
@@ -210,7 +346,7 @@ footer > .inner {
   }
 }
 @media(min-width: 680px) and (max-height: 560px) {
-  h1, .fork-me, #board-toolbar {
+  h1.main, .fork-me, #board-toolbar {
     display: none;
   }
 }
