--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,13 @@ h3 {
   font-weight: bold;
 }
 
+a:not(:visited) {
+  color: #337ab7;
+}
+a:not(:hover) {
+  text-decoration: none;
+}
+
 li {
   margin-left: -1em;
 }
@@ -123,6 +130,52 @@ td, th {
   color: white;
 }
 
+.list-group {
+  margin-bottom: 20px;
+}
+a.list-group-item {
+  color: #555;
+  text-decoration: none;
+}
+a.list-group-item:focus, a.list-group-item:hover {
+  background: #f5f5f5;
+}
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  border: 1px solid #ddd;
+}
+.list-group-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.list-group-item:last-child {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.list-group-item > .badge {
+  float: right;
+}
+.list-group-item > .badge+.badge {
+  margin-right: 5px;
+}
+.badge {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 1;
+  vertical-align: baseline;
+  white-space: nowrap;
+  text-align: center;
+  background-color: #777;
+  border-radius: 10px;
+}
+
 footer > .inner {
   text-align: center;
   padding-top: 40px;
@@ -161,6 +214,12 @@ footer > .inner {
 .glyphicon-resize-vertical:before {
   content: "\e119";
 }
+.glyphicon-download-alt:before {
+  content: "\e025";
+}
+.glyphicon-stats:before {
+  content: "\e185";
+}
 
 /* Form controls */
 
@@ -196,7 +255,7 @@ footer > .inner {
   padding: 6px 12px;
   border-radius: 4px;
   text-decoration: none;
-  color: #333;
+  color: #333 !important;
   line-height: 1.42857143;
   font-size: 14px;
 }
