--- a/templates/stats.html
+++ b/templates/stats.html
@@ -84,7 +84,8 @@
       "ply": 7,
       "wdl": 2
     }
-  ]}</code></pre>
+  ]
+}</code></pre>
   <p>
     Information for <code>w</code> and <code>b</code> to move respectively.
   </p>
