--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ h1 {
   line-height: 1.1;
   font-weight: bold;
 }
-h1 a, h1 a:hover {
+h1 a, h1 a:hover, h1 a:visited {
   color: black;
   text-decoration: none;
 }
@@ -31,6 +31,8 @@ h2 {
   background: #777;
   color: white;
   font-weight: bold;
+  border-radius: 4px;
+  text-align: left;
 }
 h2.white-win {
   background: white;
@@ -50,17 +52,19 @@ h2.black-win {
 h3 {
   font-size: 1em;
   font-weight: bold;
+  margin-top: 2em;
 }
 
-a:not(:visited) {
+a {
   color: #337ab7;
-}
-a:not(:hover) {
   text-decoration: none;
+}
+a:hover, a:visited {
+  color: #23527c;
 }
 
 li {
-  margin-left: -1em;
+  margin-left: -1.5em;
 }
 
 table {
@@ -99,6 +103,7 @@ td, th {
 
 .right-side > .inner {
   padding-bottom: 40px;
+  text-align: justify;
 }
 .warning {
   color: #8a6d3b;
@@ -163,6 +168,9 @@ a.list-group-item {
   color: #555;
   text-decoration: none;
 }
+a.list-group-item:active {
+  box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
 a.list-group-item:focus, a.list-group-item:hover {
   background: #f5f5f5;
 }
@@ -199,7 +207,7 @@ a.list-group-item:focus, a.list-group-item:hover {
   white-space: nowrap;
   text-align: center;
   background-color: #777;
-  border-radius: 10px;
+  border-radius: 4px;
 }
 
 footer > .inner {
@@ -294,7 +302,7 @@ footer > .inner {
   border-color: #adadad;
   color: #333;
 }
-.btn.active {
+.btn.active, .btn:active {
   box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
 }
 /* .input-group {
@@ -351,7 +359,7 @@ input[type=text] {
 /* Code */
 
 pre {
-  font-size: 9px;
+  font-size: 9.5px;
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: #f5f5f5;
