--- a/static/css/style.css
+++ b/static/css/style.css
@@ -276,9 +276,6 @@ footer > .inner {
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
 }
-.btn-group .btn+.btn {
-  margin-left: -1px;
-}
 .btn {
   display: inline-block;
   text-align: center;
@@ -306,16 +303,23 @@ footer > .inner {
 .btn.active, .btn:active {
   box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
 }
-/* .input-group {
+.input-group {
   position: relative;
   display: table;
-  border-collapse: seperate;
+  border-collapse: separate;
+}
+.input-group .form-control, .input-group .btn {
+  border-radius: 0;
 }
 .input-group .form-control:first-child {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
 }
-.input-group > .form-control, .input-group .input-group-btn {
+.input-group .form-control:last-child, .input-group .btn:last-child {
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.input-group .form-control, .input-group-btn {
   display: table-cell;
 }
 .input-group .form-control {
@@ -325,37 +329,42 @@ footer > .inner {
   margin-bottom: 0;
 }
 .form-control {
+  box-sizing: border-box;
   height: 34px;
-  padding: 0px 12px;
+  padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857143;
   color: #555;
   background-color: #fff;
   background-image: none;
   border: 1px solid #ccc;
-  border-radius: 4px;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  width: 100%;
 }
 input, button {
   display: inline-block;
+  font: inherit;
+  font-family: inherit;
+  line-height: inherit;
+  margin: 0;
 }
 input[type=text] {
-  text-rendering: auto;
   letter-spacing: normal;
   word-spacing: normal;
   text-transform: none;
   text-indent: 0;
   text-shadow: none;
   text-align: start;
-  font: 400 13.3333px Arial;
+  font: 400 13px Arial;
   margin: 0;
-  padding: 0 12px;
 }
 .input-group-btn {
   position: relative;
+  font-size: 0;
+  white-space: nowrap;
   width: 1%;
   vertical-align: middle;
-} */
+}
 
 /* Code */
 
