--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,6 +113,7 @@ td, th {
   border-radius: 4px;
   padding: 15px;
   margin-bottom: 15px;
+  text-align: left;
 }
 #pgn-download {
   white-space: nowrap;
