--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}{{ material }} – Syzygy endgame tablebases{% endblock %}
 
 {% block head %}
-<script src="/static/js/client.min.js"></script>
+<script src="{{ asset_url("js/client.min.js") }}"></script>
 <meta name="description" content="User interface and public API for probing Syzygy endgame tablebases">
 {% endblock %}
 
