--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/static/css/style.min.css">
+    <link rel="stylesheet" href="{{ asset_url("css/style.min.css") }}">
     {% block head %}{% endblock %}
     <title>{%block title %}Syzygy endgame tablebases{%endblock%}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
