--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@ h1 a, h1 a:hover, h1 a:visited {
 }
 
 h2 {
-  margin: 40px 0 1em 0;
+  margin: 0 0 1em 0;
   border: 1px solid black;
   font-size: 1.2em;
   padding: 10px 15px;
@@ -52,7 +52,7 @@ h2.black-win {
 h3 {
   font-size: 1em;
   font-weight: bold;
-  margin-top: 2em;
+  padding-top: 2em;
 }
 
 a {
@@ -104,6 +104,9 @@ td, th {
 
 .right-side > .inner {
   padding-bottom: 40px;
+}
+section {
+  padding-top: 40px;
 }
 .warning {
   color: #8a6d3b;
