--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -1,101 +1,102 @@
-<h2 id="status"{% if winning_side %} class="{{ winning_side }}-win{% if frustrated %} frustrated{% endif %}"{% endif %}>{{ status }}</h2>
+<section>
+  <h2 id="status"{% if winning_side %} class="{{ winning_side }}-win{% if frustrated %} frustrated{% endif %}"{% endif %}>{{ status }}</h2>
 
-{% if piece_count >= 7 and not unknown_moves %}
-  <div class="warning" role="alert">
-    Careful, this is based on <strong>experimental</strong> 7 piece tables thankfully <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">generated and shared by Bojun Guo</a>.
-  </div>
-{% endif %}
-
-<div id="winning" class="list-group {{ turn }}-turn">
-{% for move in winning_moves %}
-  <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
-    {{ move.san }}
-    {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
-    <span class="badge">{{ move.badge }}</span>
-  </a>
-{% endfor %}
-</div>
-
-<div id="cursed" class="list-group {{ turn }}-turn">
-{% for move in cursed_moves %}
-  <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
-    {{ move.san }}
-    {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
-    <span class="badge">{{ move.badge }}</span>
-  </a>
-{% endfor %}
-</div>
-
-<div id="drawing" class="list-group">
-{% for move in drawing_moves %}
-  <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
-{% endfor %}
-</div>
-
-<div id="unknown" class="list-group">
-{% for move in unknown_moves %}
-  <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
-{% endfor %}
-</div>
-
-<div id="blessed" class="list-group {{ turn }}-turn">
-{% for move in blessed_moves %}
-  <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
-    {{ move.san }}
-    {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
-    <span class="badge">{{ move.badge }}</span>
-  </a>
-{% endfor %}
-</div>
-
-<div id="losing" class="list-group {{ turn }}-turn">
-{% for move in losing_moves %}
-  <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
-    {{ move.san }}
-    {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
-    <span class="badge">{{ move.badge }}</span>
-  </a>
-{% endfor %}
-</div>
-
-
-<div id="info">
-{% if illegal %}
-  <p>The given position is not a legal chess position.</p>
-{% elif insufficient_material %}
-  <p><strong>The game is drawn</strong> because with the remaining
-    material no sequence of legal moves can lead to a checkmate.</p>
-{% elif unknown_moves %}
-  {% if fen == STARTING_FEN %}
-    <p><a href="https://en.wikipedia.org/wiki/Solving_chess">Chess is not
-      yet solved.</a></p>
+  {% if piece_count >= 7 and not unknown_moves %}
+    <div class="warning" role="alert">
+      Careful, this is based on <strong>experimental</strong> 7 piece tables thankfully <a href="http://www.talkchess.com/forum/viewtopic.php?start=0&t=66797&topic_view=flat">generated and shared by Bojun Guo</a>.
+    </div>
   {% endif %}
-  <p>Syzygy tables only provide information for positions with up to 7 pieces and
-    no castling rights.</p>
-{% elif blessed_loss %}
-  <p><strong>This is a blessed loss.</strong> Mate can be forced, but a
-    draw can be achieved under the fifty-move rule.</p>
-{% elif cursed_win %}
-  <p><strong>This is a cursed win.</strong> Mate can be forced, but a
-    draw can be achieved under the fifty-move rule.</p>
-{% endif %}
-</div>
 
-{% if not illegal %}
-  <a id="pgn-download" href="/syzygy-vs-syzygy/{{ material }}.pgn?fen={{ fen|replace(" ", "_") }}" aria-label="Download DTZ mainline" title="Download DTZ mainline">
-    <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
-    {{ material }}.pgn
-</a>
-{% endif %}
-{% if not unknown_moves %}
-  <a href="/stats/{{ material }}.json" aria-label="Machine readable statistics for {{ material }}" title="Machine readable statistics for {{ material }}">
-    <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
-    {{ material }}.json
+  <div id="winning" class="list-group {{ turn }}-turn">
+  {% for move in winning_moves %}
+    <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
+      {{ move.san }}
+      {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
+      <span class="badge">{{ move.badge }}</span>
+    </a>
+  {% endfor %}
+  </div>
+
+  <div id="cursed" class="list-group {{ turn }}-turn">
+  {% for move in cursed_moves %}
+    <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
+      {{ move.san }}
+      {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
+      <span class="badge">{{ move.badge }}</span>
+    </a>
+  {% endfor %}
+  </div>
+
+  <div id="drawing" class="list-group">
+  {% for move in drawing_moves %}
+    <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
+  {% endfor %}
+  </div>
+
+  <div id="unknown" class="list-group">
+  {% for move in unknown_moves %}
+    <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
+  {% endfor %}
+  </div>
+
+  <div id="blessed" class="list-group {{ turn }}-turn">
+  {% for move in blessed_moves %}
+    <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
+      {{ move.san }}
+      {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
+      <span class="badge">{{ move.badge }}</span>
+    </a>
+  {% endfor %}
+  </div>
+
+  <div id="losing" class="list-group {{ turn }}-turn">
+  {% for move in losing_moves %}
+    <a class="list-group-item" href="/?fen={{ move.fen|replace(" ", "_") }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
+      {{ move.san }}
+      {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
+      <span class="badge">{{ move.badge }}</span>
+    </a>
+  {% endfor %}
+  </div>
+
+
+  <div id="info">
+  {% if illegal %}
+    <p>The given position is not a legal chess position.</p>
+  {% elif insufficient_material %}
+    <p><strong>The game is drawn</strong> because with the remaining
+      material no sequence of legal moves can lead to a checkmate.</p>
+  {% elif unknown_moves %}
+    {% if fen == STARTING_FEN %}
+      <p><a href="https://en.wikipedia.org/wiki/Solving_chess">Chess is not
+        yet solved.</a></p>
+    {% endif %}
+    <p>Syzygy tables only provide information for positions with up to 7 pieces and
+      no castling rights.</p>
+  {% elif blessed_loss %}
+    <p><strong>This is a blessed loss.</strong> Mate can be forced, but a
+      draw can be achieved under the fifty-move rule.</p>
+  {% elif cursed_win %}
+    <p><strong>This is a cursed win.</strong> Mate can be forced, but a
+      draw can be achieved under the fifty-move rule.</p>
+  {% endif %}
+  </div>
+
+  {% if not illegal %}
+    <a id="pgn-download" href="/syzygy-vs-syzygy/{{ material }}.pgn?fen={{ fen|replace(" ", "_") }}" aria-label="Download DTZ mainline" title="Download DTZ mainline">
+      <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+      {{ material }}.pgn
   </a>
-{% endif %}
+  {% endif %}
+  {% if not unknown_moves %}
+    <a href="/stats/{{ material }}.json" aria-label="Machine readable statistics for {{ material }}" title="Machine readable statistics for {{ material }}">
+      <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
+      {{ material }}.json
+    </a>
+  {% endif %}
+</section>
 
 {% if fen == DEFAULT_FEN %}
-<div id="start-info">
   <section id="syzygy">
     <h2>Syzygy tablebases</h2>
 
@@ -169,5 +170,4 @@
 
     <p>Feedback <a href="/legal#contact">via mail</a>, bug reports and <a href="https://github.com/niklasf/syzygy-tables.info">pull requests</a> are welcome.</p>
   </section>
-</div>
 {% endif %}
