--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,8 @@
     <meta name="keywords" content="Syzygy,chess,endgame,tablebase">
     <meta name="author" content="Niklas Fiekas">
     <link rel="author" title="Legal" href="/legal">
-    <link rel="icon" href="/static/favicon.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="/static/favicon.32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="/static/favicon.96.png" type="image/png" sizes="96x96">
     <link rel="sitemap" href="/sitemap.txt" type="text/plain">
   </head>
   <body>
