unconditionally use cburnett

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="/static/favicon.96.png" type="image/png" sizes="96x96">
     <link rel="sitemap" href="/sitemap.txt" type="text/plain">
   </head>
-  <body class="base">
+  <body>
     {% if development %}
       <div style="background: red; color: white; text-align: center; font-weight: bold; position: fixed; z-index: 1; width: 100%; top: 0;">Careful, this is an unreliable development version.</div>
     {% endif %}
