replace link to chessboard.js

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -51,7 +51,7 @@
 
     <ul>
       <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPLv3</a>)</li>
-      <li><a href="http://chessboardjs.com/">chessboard.js</a> (<a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE">MIT</a>)</li>
+      <li><a href="https://github.com/ornicar/chessground">chessground</a> (<a href="https://github.com/ornicar/chessground/blob/master/LICENSE">GPLv3</a>)</li>
       <li><a href="https://github.com/jhlywa/chess.js">chess.js</a> (<a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">MIT</a>)</li>
       <li><a href="https://github.com/michiguel/Gaviota-Tablebases">Gaviota tablebases</a> (<a href="https://github.com/michiguel/Gaviota-Tablebases/blob/master/license.txt">MIT</a>)</li>
       <li><a href="http://aiohttp.readthedocs.org/en/stable/">aiohttp</a> (<a href="https://github.com/KeepSafe/aiohttp/blob/master/LICENSE.txt">Apache 2</a>)</li>
